--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
                 <p>We go Nation wide to deliver the best for you</p>
                 <button type="press">Sign up</button>
             </div>
-            <div>
-                <img src="../Landing_pages/PICS/Truck.jpg"width="200">
+            <div class="truck">
+                <img src="../Landing_pages/PICS/Truck.jpg"width="150">
             </div>
         </div>
     </div>
     <div class="info-container">
         <div class="infor">
             <div class="info-text">     
-            <h3>These are stakeholders of SA's Logistics Inc</h3>
+            <h3>These are stakeholders of SA's Logistics Pty</h3>
             </div>
             <div class="grid-fotos">
             <div>
@@ -51,7 +51,7 @@
             </div>
             <div>
                 <img class="info-pic" src="../Landing_pages/PICS/photo4.jpg">
-                <p> Bella Mothupi<br><br>-Manager</p>
+                <p> Bella Mothupi<br><br>--Manager</p>
             </div>
             </div>
         </div>
@@ -64,9 +64,11 @@
          that offers best delivery service across<br> Africa and international,
          and we've created a system that will be easy for you to place your Cargo.    
         </p>
-        <b><br><br>
+        <div>
+         <b>
             --Created by T Mthatyana
-        </b>    
+        </b> 
+          </div>   
          </div>
       </div>
     </div>
